
version 4.14.2 (2015-07-30)
    * Fixes URL serialisation of redirect_uri with query component in OAuth 2.0
      authorisation responses and OpenID authentication responses (iss #140).

version 4.14.3 (2015-08-17)
    * Permits empty or null client_secret values (form POST) in unauthenticated
      token requests (iss #141).

version 4.15 (2015-08-18)
    * Adds HTTPRequest ability to control follow / not follow HTTP 3xx
      redirections.

version 4.16 (2015-08-26)
     * Adds static AccessTokenHash.isRequiredInIDTokenClaims and
       CodeHash.isRequiredInIDTokenClaims methods. Intended for OP to determine
       when to add c_hash and at_hash claim to ID token claims set based on
       the requested response_type (iss #144).
     * Adds convenience ClaimsRequest.parse(String) method.
     * Fixes checks in IDTokenClaimsSet.hasRequiredClaims (iss #132).
       Introduces second method parameter to indicate the issue endpoint of the
       ID token (authz endpoint / token endpoint) which is required for hybrid
       flow checks.
     * Updates specification references to RFC 7521, RFC 7522, RFC 7523, RFC
       7591 and RFC 7592.

version 5.0-alpha1 (2015-08-28)
     * Refactors OAuth 2.0 and OpenID Connect token response classes. Renames
       TokenPair class to Tokens and adds JSON serialisation and parsing
       methods. Extends Tokens with new OIDCTokens to handle ID tokens. Renames
       OIDCAccessTokenResponse class to OICTokenResponse and makes ID token
       presence mandatory. Moves token getters to Tokens / OIDCTokens class.
       Makes BearerAccessToken cast safe.
     * Makes SerializeException unchecked.
     * Upgrades to Nimbus JOSE+JWT 4.0.
     * Upgrades to Apache Commons Lang 3.4.

version 5.0-alpha2 (2015-09-xx)
     * Fixes parsing of AuthorizationRequest, AuthorizationResponse,
       AuthenticationRequest and LogoutRequest URIs with URL-encoded special
       characters in the parameter values (iss #147).
